--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -14,57 +13,48 @@
             background-color: #121212;
             color: #e0e0e0;
         }
-
         header {
             background-color: #1f1f1f;
             padding: 20px;
             text-align: center;
         }
-
         header h1 {
             color: #fff;
             margin: 0;
             font-size: 2.5em;
         }
-
         section {
             padding: 40px;
             margin: 20px;
             border-radius: 8px;
             background-color: #1c1c1c;
         }
-
         h2 {
             color: #ff5722;
         }
-
         .image-gallery img {
             width: 100%;
             height: auto;
             border-radius: 8px;
             margin-bottom: 20px;
         }
-
         .image-gallery {
             display: flex;
             flex-wrap: wrap;
             gap: 20px;
             justify-content: center;
         }
-
         .contact-info {
             display: flex;
             flex-direction: column;
             align-items: center;
         }
-
         .contact-info a {
             color: #ff5722;
             text-decoration: none;
             margin: 5px 0;
             font-size: 1.2em;
         }
-
         footer {
             background-color: #1f1f1f;
             text-align: center;
@@ -77,45 +67,40 @@
         }
     </style>
 </head>
-
 <body>
 
-    <header>
-        <h1>Anirudh Bora</h1>
-        <p>Football Enthusiast | Messi Fanatic</p>
-    </header>
+<header>
+    <h1>Anirudh Bora</h1>
+    <p>Football Enthusiast | Messi Fanatic</p>
+</header>
 
-    <section id="about">
-        <h2>About Me</h2>
-        <p>Hey, I'm Anirudh Bora, a passionate football fan with a particular love for Messi's incredible skills. I
-            enjoy capturing moments from the world of football, whether it's through photography or just sharing my
-            favorite highlights. When I'm not watching the latest match, you can find me discussing tactics, history, or
-            the next big match with friends. Feel free to browse some of my favorite moments from the football world
-            below!</p>
-    </section>
+<section id="about">
+    <h2>About Me</h2>
+    <p>Hey, I'm Anirudh Bora, a passionate football fan with a particular love for Messi's incredible skills. I enjoy capturing moments from the world of football, whether it's through photography or just sharing my favorite highlights. When I'm not watching the latest match, you can find me discussing tactics, history, or the next big match with friends. Feel free to browse some of my favorite moments from the football world below!</p>
+</section>
 
-    <section id="gallery" class="image-gallery">
-        <h2>Gallery</h2>
-        <div>
-            <img src="https://example.com/messi-photo1.jpg" alt="Messi playing football">
-            <img src="https://example.com/football-action1.jpg" alt="Football in action">
-            <img src="https://example.com/messi-photo2.jpg" alt="Messi with the Ballon d'Or">
-        </div>
-    </section>
+<section id="gallery" class="image-gallery">
+    <h2>Gallery</h2>
+    <div>
+        <!-- Replace these links with actual image URLs -->
+        <img src="https://upload.wikimedia.org/wikipedia/commons/4/44/Lionel_Messi_20180626.jpg" alt="Messi playing football">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/e/e2/Lionel_Messi_2018.jpg" alt="Football in action">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/7/7f/Lionel_Messi_Ballon_d%27Or.jpg" alt="Messi with the Ballon d'Or">
+    </div>
+</section>
 
-    <section id="contact">
-        <h2>Contact</h2>
-        <div class="contact-info">
-            <a href="mailto:anirudh@example.com">Email me</a>
-            <a href="https://linkedin.com/in/anirudh-bora" target="_blank">LinkedIn</a>
-            <a href="https://twitter.com/anirudh_bora" target="_blank">Twitter</a>
-        </div>
-    </section>
+<section id="contact">
+    <h2>Contact</h2>
+    <div class="contact-info">
+        <a href="mailto:anirudh@example.com">Email me</a>
+        <a href="https://linkedin.com/in/anirudh-bora" target="_blank">LinkedIn</a>
+        <a href="https://twitter.com/anirudh_bora" target="_blank">Twitter</a>
+    </div>
+</section>
 
-    <footer>
-        <p>&copy; 2024 Anirudh Bora | All Rights Reserved</p>
-    </footer>
+<footer>
+    <p>&copy; 2024 Anirudh Bora | All Rights Reserved</p>
+</footer>
 
 </body>
-
 </html>
